feat: Adding scroll effect

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,15 @@
     font-family: 'Poppins', sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+:target {
+  scroll-margin-top: .8em;
+}
+
+
 li {
     list-style: none;
 }
