--- a/css/header.css
+++ b/css/header.css
@@ -4,6 +4,10 @@ header {
     display: flex;
     justify-content: center;
     padding: 0 20px;
+    position: fixed;
+    right: 0;
+    left: 0;
+    z-index: 10;
 }
 
 header .sectionSize {
@@ -49,7 +53,7 @@ header nav ul li a:hover{
 @media (max-width: 542px) {
     header { 
         height: auto;
-      
+        width: 100vw;
     }
     
     header nav ul {
