--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ html {
 }
 
 :target {
-  scroll-margin-top: .8em;
+  scroll-margin-top: 10em;
 }
 
 
@@ -43,9 +43,6 @@ main {
     padding: 0 20px;
 }
 
-
-/* @media (max-width: 836px) {
-    main {
-       padding-top: 100px;
-    }
-} */
+main {
+    padding-top: 100px;
+}
