--- a/css/general.css
+++ b/css/general.css
@@ -5,7 +5,6 @@
     flex-direction: column;
     align-items: start;
     max-width: 1177px;
-    /* width: 74%; */
     border-bottom: 1px solid #E2D1D1;
 }
 
@@ -40,7 +39,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    
+    transition: all .2s ease-in-out;
+}
+
+.cardGeneral:hover {
+    transform: scale(1.2); 
 }
 
 .cardGeneral:nth-child(2) {
@@ -77,9 +80,7 @@
     }
 
     .general .cardsArea{
-      
         justify-content: center;
-      
     }
 }
 
