--- a/css/itemByState.css
+++ b/css/itemByState.css
@@ -9,6 +9,7 @@
     border-radius: 10px;
     display: flex;
     padding: 10px 25px;
+    transition: all .2s ease-in-out;
 }
 
 .itemByState {
@@ -36,4 +37,8 @@
     font-size: 18px;
     font-weight: 400;
     color: #656464;
+}
+
+.itemByState:hover{
+    transform: scale(1.3); 
 }
