--- a/css/itemByState.css
+++ b/css/itemByState.css
@@ -1,6 +1,4 @@
 
-
-/* item por estado */
 .itemByState {
     width: 200px;
     height: 96px;
@@ -41,4 +39,5 @@
 
 .itemByState:hover{
     transform: scale(1.3); 
+    border: 1px solid #2b68ed;
 }
